fix phone numbers, remove duplicates